fix taskbar z-index

--- a/src/app/layouts/template/taskbar/taskbar.component.scss
+++ b/src/app/layouts/template/taskbar/taskbar.component.scss
@@ -7,7 +7,7 @@ $taskbar-open-color: #005ea5;
   width: 100%;
   background: #004172;
   box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
-  z-index: 3;
+  z-index: 99999999;
 
   .item-left {
     height: 43px;
